--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
 <div class="text-center">
-    <h1 class="display-4">Bem vindo ao sistema Biblioteca</h1>
+    <h2 class="display-3 text-center">Bem vindo ao sistema Biblioteca</h2>
     <p>Use o menu superior para navegar.</p>
 </div>
+
