--- a/Views/Livro/Listagem.cshtml
+++ b/Views/Livro/Listagem.cshtml
@@ -1,6 +1,10 @@
 @model List<Livro>
 @{
     ViewData["Title"] = "Listagem de Livros";
+    int FiltroPorPag = Int32.Parse(ViewData["livrosPorPagina"].ToString());
+    int PaginaAtual = Int32.Parse(ViewData["PaginaAtual"].ToString());
+    int NumLivrosPorPag = (Model.Count<FiltroPorPag ? Model.Count : FiltroPorPag);
+    int NumTotalDePag = Model.Count/NumLivrosPorPag + (Model.Count%NumLivrosPorPag==0 ? 0 : 1);
 }
 <div class="row">
     <div class="col-md-12">
@@ -11,37 +15,64 @@
                 <option value="Titulo">Título</option>
             </select>
         </div>
+
         <div class="form-group mb-2 mx-sm-3">
             <input type="text" placeholder="Filtro" name="Filtro" class="form-control" />
         </div>
-        <button type="submit" class="btn btn-primary mb-2">Pesquisar</button>
+
+        <div>
+            <select class="form-control mb-2" name="itensPorPagina" id="itensPorPagina">
+                <option value="10">10 livros</option>
+                <option value="15">15 livros</option>
+                <option value="30">30 livros</option>
+                <option value="50">50 livros</option>
+                <option value="@Model.Count"> Todos</option>
+            </select>
+        </div>
+
+        <button type="submit" class="btn btn-info ml-2 mb-2">Pesquisar</button>
+
     </form>
     </div>
 </div>
 
 <div class="row">
     <div class="col-md-12">
-        <table class="table table-striped"> 
-            <thead>
-                <tr><th>Id</th>
-                <th>Titulo</th>
-                <th>Autor</th>
-                <th>Ano</th>
-                <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach(Livro l in Model)
-                {
-                <tr>
-                    <td>@l.Id</td>
-                    <td>@l.Titulo</td>
-                    <td>@l.Autor</td>
-                    <td>@l.Ano</td>
-                    <td><a href="/Livro/Edicao/@l.Id">Editar</a></td>
-                </tr>
-                }
-            </tbody>
-        </table>
+        @if(@Model.Count!=0)
+        {          
+            <table class="table table-success table-striped"> 
+                <thead>
+                    <tr><th>Id</th>
+                    <th>Titulo</th>
+                    <th>Autor</th>
+                    <th>Ano</th>
+                    <th></th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    @for(int i = (PaginaAtual-1)*NumLivrosPorPag; i<(NumLivrosPorPag*PaginaAtual<Model.Count?NumLivrosPorPag*PaginaAtual:Model.Count); i++)
+                    {
+                    <tr>
+                        <td>@Model[i].Id</td>
+                        <td>@Model[i].Titulo</td>
+                        <td>@Model[i].Autor</td>
+                        <td>@Model[i].Ano</td>
+                        <td><a href="/Livro/Edicao/@Model[i].Id">Editar</a></td>
+                    </tr>
+                    }
+                </tbody>
+            </table>
+            <div class="text-center mt-5" id="SeletorPaginas">
+            <span>Página:</span>
+            @for(int i=1; i<=NumTotalDePag;i++)
+            {
+                <span><a href="/Livro/Listagem?PaginaAtual=@i">@i, </a></span>
+            }
+        </div>
+        }else
+        {
+            <h2>Nenhum registro encontrado</h2>
+        }
     </div>
 </div>
