--- a/Views/Livro/_FormCadastro.cshtml
+++ b/Views/Livro/_FormCadastro.cshtml
@@ -7,7 +7,8 @@
             <input asp-for="Titulo" class="form-control"/>
         </div>
         <div class="form-group">
-            <label asp-for="Autor">Ator</label>
+            <!-- Corrigido estava escrito Ator ao invés de Autor -->
+            <label asp-for="Autor">Autor</label>
             <input asp-for="Autor" class="form-control"/>
         </div>
         <div>
