--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -3,8 +3,8 @@
 }
 <!--<div class="container">-->
     <div class="row justify-content-md-center">
-        <div class="jumbotron col-6">
-            <h1>Bem vindo ao sistema Biblioteca</h1>
+        <div class="jumbotron col-6 text-center">
+            <h1 class="display-6">Bem vindo a Biblioteca IAM</h1>
             <form asp-action="Login" method="POST">
                 <div class="form-group">
                     <input type="text" placeholder="Login" class="form-control" name="login" />
@@ -12,7 +12,7 @@
                 <div class="form-group">
                     <input type="password" placeholder="Senha" class="form-control" name="senha"/>
                 </div>
-                <input type="submit" class="btn btn-primary btn-lg" value="Entrar" />
+                <input type="submit" class="btn btn-success btn-lg" value="Entrar" />
             </form>
             <p class="text-danger">@ViewData["Erro"]</p>
         </div>
