--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,22 +11,32 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Biblioteca</a>
+                <a class="navbar-brand text-info" asp-area="" asp-controller="Home" asp-action="Index">Biblioteca IAM</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-light" href="/Livro/Cadastro" id="menuLivros">Livros</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link text-warning dropdown-toggle" data-toggle="dropdown" href="#" id="menuLivros">Livros</a>
+                            <div class="dropdown-menu bg-dark" aria-labelledby="menuLivros">
+                                <a class="dropdown-item text-info" href="/Livro/Listagem">Listagem</a>
+                                <a class="dropdown-item text-info" href="/Livro/Cadastro">Cadastro</a>
+                            </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link text-light dropdown-toggle" data-toggle="dropdown" href="#">Emprestimo</a>
-                            <div class="dropdown-menu" aria-labelledby="menuLivros">
-                                <a class="dropdown-item" href="/Emprestimo/Listagem">Listagem</a>
-                                <a class="dropdown-item" href="/Emprestimo/Cadastro">Cadastro</a>
+                            <a class="nav-link text-warning dropdown-toggle" data-toggle="dropdown" href="#" id="menuEmprestimo">Emprestimo</a>
+                            <div class="dropdown-menu bd-dark" aria-labelledby="menuEmprestimo">
+                                <a class="dropdown-item text-info" href="/Emprestimo/Listagem">Listagem</a>
+                                <a class="dropdown-item text-info" href="/Emprestimo/Cadastro">Cadastro</a>
                             </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-warning" href="/Usuarios/ListaDeUsuarios" id="menuUsuarios">Lista de Usuários</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-warning" href="/Usuarios/Sair" id="menuUsuarios">Logout</a>
                         </li>
                     </ul>
                 </div>
