--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -61,6 +61,8 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  background-color: #8EC5FC;
+  background-image: linear-gradient(62deg, #F8F8FF 0%, #FFFAFA 100%);
 }
 .footer {
   position: absolute;
@@ -68,4 +70,13 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+.backg{
+
+  border-radius: 25px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  padding: 75px;
+  box-shadow: 6px 4px 21px 0px rgba(0,0,0,0.49);
+  -webkit-box-shadow: 6px 4px 21px 0px rgba(0,0,0,0.49);
+  -moz-box-shadow: 6px 4px 21px 0px rgba(0,0,0,0.49);
 }
